[package]
name = "usequence-server"
version = "0.1.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
dialoguer = "0.11.0"
rocket = { version = "0.5.0", features = ["json"], optional = true }


[features]
default = []
bin = ["rocket"]

[[bin]]
name = "usequence-server"
path = "src/main.rs"
required-features = ["bin"]
